# goit-pythonweb-hw-06

./: alembic.ini  db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 4fadcfbfd8cf_test_migration.py  7c6f3e4f35de_migration_take_2.py
